<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>clea-server</artifactId>
        <groupId>fr.gouv.clea</groupId>
        <version>0.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>clea-batch</artifactId>

    <properties>
        <java.version>11</java.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-batch</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-jdbc</artifactId>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-bootstrap</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-consul-config</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-vault-config-consul</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <configuration>
                    <verbose>false</verbose>
                    <offline>true</offline>
                    <failOnNoGitDirectory>false</failOnNoGitDirectory>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <executions>
                    <execution>
                        <id>default-testResources</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testResources</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-resources</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>resources</goal>
                        </goals>
                        <configuration>
                            <encoding>${project.build.sourceEncoding}</encoding>
                            <resources>
                                <resource>
                                    <directory>src/main/resources</directory>
                                </resource>
                                <resource>
                                    <directory>src/main/resources</directory>
                                    <includes>
                                        <include>banner.txt</include>
                                    </includes>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <classifier>exec</classifier>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <descriptors>
                        <descriptor>src/assembly/distribution.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>test-bats</id>
            <activation>
                <property>
                    <name>test.bats</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-scm-plugin</artifactId>
                        <version>1.11.2</version>
                        <executions>
                            <execution>
                                <id>clone-bats-core</id>
                                <goals>
                                    <goal>checkout</goal>
                                </goals>
                                <phase>test</phase>
                                <configuration>
                                    <checkoutDirectory>${project.basedir}/target/bats/core</checkoutDirectory>
                                    <connectionType>connection</connectionType>
                                    <connectionUrl>scm:git:https://github.com/bats-core/bats-core.git</connectionUrl>
                                </configuration>
                            </execution>
                            <execution>
                                <id>clone-bats-support</id>
                                <goals>
                                    <goal>checkout</goal>
                                </goals>
                                <phase>test</phase>
                                <configuration>
                                    <checkoutDirectory>${project.basedir}/target/bats/support</checkoutDirectory>
                                    <connectionType>connection</connectionType>
                                    <connectionUrl>scm:git:https://github.com/ztombol/bats-support.git</connectionUrl>
                                </configuration>
                            </execution>
                            <execution>
                                <id>clone-bats-assert</id>
                                <goals>
                                    <goal>checkout</goal>
                                </goals>
                                <phase>test</phase>
                                <configuration>
                                    <checkoutDirectory>${project.basedir}/target/bats/assert</checkoutDirectory>
                                    <connectionType>connection</connectionType>
                                    <connectionUrl>scm:git:https://github.com/ztombol/bats-assert.git</connectionUrl>
                                </configuration>
                            </execution>
                        </executions>
                        <configuration>
                            <providerImplementations>
                                <git>jgit</git>
                            </providerImplementations>
                        </configuration>
                        <dependencies>
                            <dependency>
                                <groupId>org.apache.maven.scm</groupId>
                                <artifactId>maven-scm-provider-jgit</artifactId>
                                <version>1.11.2</version>
                            </dependency>
                        </dependencies>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.0.0</version>
                        <executions>
                            <execution>
                                <id>chmod</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>test</phase>
                                <configuration>
                                    <executable>chmod</executable>
                                    <arguments>
                                        <argument>+x</argument>
                                        <argument>target/bats/core/bin/bats</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>chmod-libexec</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>test</phase>
                                <configuration>
                                    <executable>chmod</executable>
                                    <arguments>
                                        <argument>+x</argument>
                                        <argument>target/bats/core/libexec/bats-core/bats-exec-suite</argument>
                                        <argument>target/bats/core/libexec/bats-core/bats-exec-file</argument>
                                        <argument>target/bats/core/libexec/bats-core/bats-exec-test</argument>
                                        <argument>target/bats/core/libexec/bats-core/bats-preprocess</argument>
                                        <argument>target/bats/core/libexec/bats-core/bats-format-pretty</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>bats</id>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <phase>test</phase>
                                <configuration>
                                    <executable>target/bats/core/bin/bats</executable>
                                    <arguments>
                                        <argument>src/test/bats</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>